2004-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Fixed warning (l4) for unused variables.
	* KeyPairPersistence.cs: Fixed warning (l4) for unused variable.
	* PKCS1.cs: Added empty {} to fix warning about possible empty stmnt.

2004-07-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MACAlgorithm.cs: Removed the hardcoded PaddingMode.Zeros as this is 
	now selectable in Fx 2.0.
	* SymmetricTransform.cs: Throw CryptographicException when CipherMode
	CTS or OFB is being used (to match MS implementation).

2004-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricTransform.cs: Reduce by one the number of block when 
	decrypting. This operation was in CryptoStream before but is only
	required for decryption (which CryptoStream can't know). 
	Fix bug #60573.

2004-05-27  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricTransform.cs: Fixed possible integer overflow. Added 
	missing exception handling in TransformBlock and TransformFinalBlock.

2004-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Synched with Mono.Security.dll. Fix bug #57941 
	(truncated key pair).
	* RSAManaged.cs: Synched with Mono.Security.dll. Fix bug #57941 
	(truncated key pair).

2004-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: In sync with Mono.Security.dll version.
	* CryptoTools.cs: In sync with Mono.Security.dll version.
	* DSAManaged.cs: Changed delegate to please FxCop.
	* PKCS1.cs: In sync with Mono.Security.dll version.
	* RSAManaged.cs: In sync with Mono.Security.dll version.
	* SymmetricTransform.cs: Fixed a bug when offset > 0 in destination
	buffer. Changed Array.Copy to Buffer.BlockCopy.

2004-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* KeyPairPersistence.cs: Completed key pair protection for both
	Linux and Windows (protection done by runtime).

2004-04-08  Bernie Solomon  <bernard@ugsolutions.com>

	* PKCS1.cs: Use BitConverterLE
