@@ -1,3 +1,9 @@
+2004-09-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* RSAManaged.cs: KeySize is always a multiple of 8 bits (promotion to
+	a bigger size if required) to match MS implementation (and other 
+	issues like SSL).
+
 2004-09-16  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* CryptoConvert.cs: Fixed warning (l4) for unused variables.
